zero-schema-macros/tests/ui/fail/61_optional_std_primitive.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<std::primitive::u16>,
}

fn main() {}
